Footer overlap issue

--- a/src/components/CommonComponents/Header/style.css
+++ b/src/components/CommonComponents/Header/style.css
@@ -9,12 +9,11 @@ img{
 }
 
 .Header{
-    position: absolute;
     background-color: #000;
-    top: 50px;
     width: 100%;
     display: flex;
     align-items: center;
+    height: 100px;
 }
 
 .logo{
